--- a/01-Build a Responsive Bootstrap Website from Scratch using Bootstrap4, HTML5 & CSS3/code/BootstrapExample/css/style.css
+++ b/01-Build a Responsive Bootstrap Website from Scratch using Bootstrap4, HTML5 & CSS3/code/BootstrapExample/css/style.css
@@ -1,21 +1,21 @@
-@import url('https://fonts.googleapis.com/css?family=Gamja+Flower');
+@import url('https://fonts.googleapis.com/css?family=Sans+Serif');
 
 html, body {
 	width: 100%;
 	height: 100%;
-	font-family: 'Gamja Flower';
+	font-family: 'Sans+Serif';
 	font-size: 28px;
 	color: #222;
 }
 
 .navbar {
-	background-color: rgba(82,64,120,0.9) !important;
+	background-color: rgba(255, 255, 255, 0.9) !important;
 }
 .navbar li a {
-    color: white !important;
+    color: black !important;
 }
 .navbar li a:hover {
-    color: black !important;
+    color: rgba(177,43,55,0.9) !important;
 }
 .carousel-inner img {
 	width: 100%;
@@ -34,11 +34,12 @@ html, body {
 	text-shadow: 2px 2px 10px #000;
 }
 .btn-primary {
-	background-color: rgb(82,64,120);
+	background-color: rgba(177,43,55,0.9);
 	border: 1px solid white;
 }
 .btn-primary:hover {
-	background-color: rgb(62,44,100);
+	background-color: rgba(8, 129, 241, 0.9);
+	text-decoration-color: #000;
 	border: 1px solid white;
 }
 .jumbotron {
@@ -46,7 +47,7 @@ html, body {
 	border-radius: 0;
 }
 .welcome hr {
-	border-top: 2px solid rgba(62,44,100, 0.6);
+	border-top: 2px solid rgba(177,43,55,0.9);
 	width: 95%;	
 	margin-bottom: 2rem;
 }
